--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
 
     /* Projects */
     "composite": true,                                /* Enable constraints that allow a TypeScript project to be used with project references. */
+    "declaration": true,
 
     /* Language and Environment */
     "target": "es2017",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
