--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "minimon",
-  "version": "1.0.0",
+  "name": "monilite",
+  "version": "1.0.3",
   "description": "A minimal monitoring toolset designed for real time analysis of streaming data.",
   "main": "app.js",
   "keywords": [
@@ -8,9 +8,9 @@
   ],
   "author": "Stephen O'Connor",
   "license": "MIT",
+  "types": "index.d.ts",
   "dependencies": {
     "accessible-autocomplete": "^2.0.4",
-    "commander": "^10.0.0",
     "finalhandler": "^1.2.0",
     "serve-static": "^1.15.0"
   },
@@ -27,6 +27,7 @@
   "scripts": {
     "test": "tsc && ava",
     "demo": "tsc && node dist/scripts/demo.js",
-    "build": "tsc && webpack --mode production && node dist/scripts/copyStatic.js"
+    "build": "tsc && webpack --mode production && node dist/scripts/copyStatic.js",
+    "prepublish": "npm run build"
   }
 }
