--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test": "tsc && ava",
     "demo": "tsc && node dist/scripts/demo.js",
     "build": "tsc && webpack --mode production && node dist/scripts/copyStatic.js",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "release": "npm version minor && npm publish"
   }
 }
