--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
-    "composite": true,                                /* Enable constraints that allow a TypeScript project to be used with project references. */
+    "composite": false,                                /* Enable constraints that allow a TypeScript project to be used with project references. */
     "declaration": true,
 
     /* Language and Environment */
